# lumos

./: .gitignore  .python-version  README.md  main.py  pyproject.toml
output/: Book 01 - Origen - Books 1-5_ocr_20260226_015130.txt  Book 01 - Origen - Books 1-5_translation_20260226_015130.txt
scripts/: download_tessdata.py
src/diagnostics/: __init__.py  requirements.py
src/ocr/: __init__.py  engine.py
src/projects/: __init__.py  manager.py
src/translation/: __init__.py  base.py  config.py  lmstudio.py  opencode.py
src/ui/: __init__.py  app.py  components.py  project_list.py
tessdata/: README.txt
